; ModuleID = '/home/carl/AnghaBench/linux/tools/perf/util/extr_hist.c_check_thread_entry.c'
source_filename = "/home/carl/AnghaBench/linux/tools/perf/util/extr_hist.c_check_thread_entry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.perf_hpp_fmt = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.perf_hpp_fmt*)* @check_thread_entry to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @check_thread_entry(%struct.perf_hpp_fmt* %0) #0 {
  %2 = alloca %struct.perf_hpp_fmt*, align 8
  store %struct.perf_hpp_fmt* %0, %struct.perf_hpp_fmt** %2, align 8
  %3 = load %struct.perf_hpp_fmt*, %struct.perf_hpp_fmt** %2, align 8
  %4 = call i64 @perf_hpp__is_thread_entry(%struct.perf_hpp_fmt* %3)
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %10, label %6

6:                                                ; preds = %1
  %7 = load %struct.perf_hpp_fmt*, %struct.perf_hpp_fmt** %2, align 8
  %8 = call i64 @perf_hpp__is_comm_entry(%struct.perf_hpp_fmt* %7)
  %9 = icmp ne i64 %8, 0
  br label %10

10:                                               ; preds = %6, %1
  %11 = phi i1 [ true, %1 ], [ %9, %6 ]
  %12 = zext i1 %11 to i32
  ret i32 %12
}

declare dso_local i64 @perf_hpp__is_thread_entry(%struct.perf_hpp_fmt*) #1

declare dso_local i64 @perf_hpp__is_comm_entry(%struct.perf_hpp_fmt*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
